# sol

./: .csharpierrc  Cargo.toml  README.md  devcon.sln  sol.sln
cli/: log.txt  (+2 more)
sol/: .gitignore  Cargo.toml  debug.json
sol/.cargo/: config.toml
sol/src/: lib.rs  main.rs  sample_programs.rs  wasm.rs
sol/src/expression/: expression_parser.rs  expression_token.rs  mod.rs
sol/src/helpers/: lexer_helpers.rs  mod.rs  program_equivalent.rs
sol/src/lang/: SolSpec.md  expression_parser.rs  expression_token.rs  mod.rs
sol/src/lang/sol_ast/: deref_expression.rs  expression_set.rs  mod.rs  sol_ast.rs  symbol_expression.rs
sol/src/lang/tests/: mod.rs  (+1 more)
sol/src/lsp/: mod.rs  semantic_analysis.rs  semantic_types.rs
sol/src/type_context/: mod.rs  type_context.rs  type_context_wasm.rs  type_doc.rs  type_doc_ref.rs
sol/src/type_program/: ast_equivalent.rs  ast_visitor.rs  class_decl.rs  generic_param_decl.rs  global_val.rs  identifier_decl.rs  lambda_decl.rs  lexon_set.rs  method_decl.rs  mod.rs  parser.rs  program_equivalent.rs  st_ast_equivalent.rs  st_parser.rs  st_token.rs  type_lexer.rs  type_program.rs  type_ref.rs  type_system.rs
sol/src/type_program_eval/: mod.rs
sol/src/type_program_old/: ast_visitor.rs  class_decl.rs  generic_param_decl.rs  global_val.rs  identifier_decl.rs  lambda_decl.rs  method_decl.rs  mod.rs  type_program.rs  type_program_print.rs  type_ref_ast.rs  type_token.rs
sol/src/type_system/: method_type.rs  mod.rs  object_instance_type.rs  object_type.rs  scope.rs  type_program_interpreter.rs  type_ref.rs  type_resolution.rs  type_system.rs
(+202 files in other folders)
