[package]
name = "sol"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chumsky = "0.10.1"
foreach = "0.3.0"
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde_json = "1.0"
ts-rs = "11.0.1"
serde-wasm-bindgen = "0.6.5"
ariadne = "0.5.1"
