[package]
name = "sol"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chumsky = "0.10.1"
foreach = "0.3.0"
logos = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
serde_json = "1.0"
ts-rs = "11.0.1"
serde-wasm-bindgen = "0.6.5"
ariadne = "0.5.1"
sol_helpers = { path = "../sol_helpers" }
dotenv = "0.15.0"
clap = "4.5.40"
ouroboros = "0.18.5"
derive-getters = "0.5.0"
derive-new = "0.7.0"
once_cell = "1.21.3"
